--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ManishSorout07/NamasteReact/issues"
   },
-  "homepage": "https://github.com/ManishSorout07/NamasteReact#readme"
+  "homepage": "https://github.com/ManishSorout07/NamasteReact#readme",
+  "devDependencies": {
+    "parcel": "^2.15.4"
+  }
 }
